--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "Mojo"
 description: "A blog for coffee shop owners and managers made by Mojo."
 meta_description: "A blog for coffee shop owners and managers made by Mojo."
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
+logo: 'assets/images/mojo_logo.png'
+favicon: 'assets/images/mojo_favicon.png'
 baseurl: ''
 google_analytics: ''
 disqus: ''
