added Noah's bio

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ authors:
     email: noah@mojocoffee.io
     web: https://twitter.com/NoahBraggg
     twitter: https://twitter.com/NoahBraggg
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    description: "Co-founder of Mojo; a platform for independent coffee shops to offer order-ahead for their customers. Noah loves building software and creating an experience that really delights users! In his free time Noah enjoys reading, listening to podcasts, and playing with his little baby girl!"
 
 # Plugins
 plugins: 
