Case study first draft

--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ authors:
     display_name: Drew Bidlen
     avatar: 'assets/images/drew_profile_pic.png'
     email: drew@mojocoffee.io
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
+    web: https://www.linkedin.com/in/andrewbidlen/
+    twitter: https://www.linkedin.com/in/andrewbidlen/
+    description: "Drew lives by the beaches of Charleston, South Carolina with his wife and golden retriever. If he's not working on Mojo, Drew is probably at the beach playing doubles volleyball."
   noah:
     name: noah
     display_name: Noah Bragg
